# HydroWise

./: .gitignore  README.md  ROADMAP.md  Readme.md  biome.json  package.json  readme_quiz_feature.md  repomix-output.xml  turbo.json
.cursor/rules/: function-comments.mdc
_archive/: .gitignore  Readme.md  biome.json
_archive/apps/web/: package.json  tsconfig.app.json
app/client/: package.json
app/client/src/: App.tsx  main.tsx
app/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
app/desktop/config/: llama-router.ini  models.ini
app/desktop/src/: main.tsx  styles.css
app/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/src/: main.rs
app/desktop/src-tauri/src/ai/: mod.rs  paths.rs  sidecar.rs  state.rs
app/desktop/src-tauri/src/desktop_models/: download.rs  mod.rs  paths.rs  server.rs  state.rs
app/desktop/src-tauri/src/embedding_model/: mod.rs  paths.rs  server.rs  state.rs
app/desktop/src-tauri/src/language_model/: download.rs  paths.rs  server.rs  state.rs
app/shared/: package.json
app/shared/src/: App.tsx  index.css
app/web/: index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/web/src/: App.tsx  data.ts  (+3 more)
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
design/: Chat.html  Dashboard.html  HydroWise.pen  Material.html  Quiz.html
patches/: @huggingface%2Ftransformers@4.0.0-next.7.patch
services/api/: package.json  tsconfig.json
(+432 files in other folders)
